logs/exporters.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/exporters'...
Listing './lib/python3.5/site-packages/exporters/bypasses'...
Listing './lib/python3.5/site-packages/exporters/contrib'...
Listing './lib/python3.5/site-packages/exporters/contrib/export_formatter'...
Listing './lib/python3.5/site-packages/exporters/contrib/export_managers'...
Listing './lib/python3.5/site-packages/exporters/contrib/filters'...
Listing './lib/python3.5/site-packages/exporters/contrib/groupers'...
Listing './lib/python3.5/site-packages/exporters/contrib/logger'...
Listing './lib/python3.5/site-packages/exporters/contrib/notifications'...
Listing './lib/python3.5/site-packages/exporters/contrib/persistence'...
Listing './lib/python3.5/site-packages/exporters/contrib/readers'...
Listing './lib/python3.5/site-packages/exporters/contrib/stats_managers'...
Listing './lib/python3.5/site-packages/exporters/contrib/transform'...
Listing './lib/python3.5/site-packages/exporters/contrib/writers'...
Listing './lib/python3.5/site-packages/exporters/export_formatter'...
Listing './lib/python3.5/site-packages/exporters/export_managers'...
Listing './lib/python3.5/site-packages/exporters/filters'...
Listing './lib/python3.5/site-packages/exporters/groupers'...
Listing './lib/python3.5/site-packages/exporters/logger'...
Listing './lib/python3.5/site-packages/exporters/notifications'...
Listing './lib/python3.5/site-packages/exporters/persistence'...
Listing './lib/python3.5/site-packages/exporters/pipeline'...
Listing './lib/python3.5/site-packages/exporters/readers'...
Compiling './lib/python3.5/site-packages/exporters/readers/s3_reader.py'...
***   File "./lib/python3.5/site-packages/exporters/readers/s3_reader.py", line 20
    except httplib.IncompleteRead, e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/exporters/records'...
Listing './lib/python3.5/site-packages/exporters/stats_managers'...
Listing './lib/python3.5/site-packages/exporters/transform'...
Listing './lib/python3.5/site-packages/exporters/writers'...
Listing './lib/python3.5/site-packages/exporters-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/retrying-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
